max-width changed to avoid spill over

--- a/index.css
+++ b/index.css
@@ -31,7 +31,7 @@ main{
 /*==== Card ====*/
 .card{
     background: var(--card_BG);
-    max-width: 320px;
+    max-width: fit-content;
     padding: 1.5em;
     border-radius: 15px;
     margin: 0 auto;
